--- a/.github/workflows/lean_action_ci.yml
+++ b/.github/workflows/lean_action_ci.yml
@@ -1,24 +1,15 @@
-
 name: Lean Action CI
 
 on:
   push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
-
-      - name: Set up Lean
-        uses: leanprover/lean-action@v1
-
-      - name: Lake update
-        run: lake update
-
-      - name: Lake build
-        run: lake build
+      - uses: leanprover/lean-action@v1
 
